# rule-of-three

./: .flake8  .gitignore  license  pyproject.toml  readme.md
src/rule_of_three/: __main__.py  rule_of_three.py
tests/: test_main.py  test_rule_of_three.py
