[tool.poetry]
name = "rule-of-three"
version = "0.1.0"
description = "It is a way to simplify an equation or determine the value of a variable."
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/fferegrino/rule-of-three"
repository = "https://github.com/fferegrino/rule-of-three"

[tool.poetry.scripts]
ro3 = "rule_of_three.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.4.4"}
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
